#1 initial site mark up with no styling. linked the stylesheet just to ensure the flex wrapping works properly

--- a/project/css/Styles.css
+++ b/project/css/Styles.css
@@ -1,1 +1,12 @@
 /*Styles in here*/
+
+.container>div{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+body{
+    background-image: url("../img/SongListDisplay.png");
+    background-color: black;
+    background-repeat: no-repeat;
+}
